<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context="info.superego.qrreader.ui.CodeInformationActivity"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/secondary_text"
            />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="447dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintBottom_toTopOf="@+id/Linear"
        android:layout_marginStart="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/textView2"
            style="@style/DescriptionOfText"
            android:text="@string/info_name"
            />

            <TextView
                android:id="@+id/name_info"
                style="@style/InfoTexts"
                android:freezesText="true"
                />

            <TextView
            android:id="@+id/textView3"
            style="@style/DescriptionOfText"
            android:text="@string/info_mail"
            />

        <TextView
            android:id="@+id/email_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />

        <TextView
            android:id="@+id/textView4"
            style="@style/DescriptionOfText"
            android:text="@string/info_phone"
            />

        <TextView
            android:id="@+id/phone_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />

        <TextView
            android:id="@+id/textView5"
            style="@style/DescriptionOfText"
            android:text="@string/info_time"
            />


        <TextView
            android:id="@+id/date_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />

        <TextView
            android:id="@+id/textView6"
            style="@style/DescriptionOfText"
            android:text="@string/info_zone"
            />


        <TextView
            android:id="@+id/zone_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />

        <TextView
            android:id="@+id/textView7"
            style="@style/DescriptionOfText"
            android:text="@string/info_sector"
            />


        <TextView
            android:id="@+id/sector_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />

        <TextView
            android:id="@+id/textView8"
            style="@style/DescriptionOfText"
            android:text="@string/info_row"
            />


        <TextView
            android:id="@+id/row_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />

        <TextView
            android:id="@+id/textView9"
            style="@style/DescriptionOfText"
            android:text="@string/info_place"
            />


        <TextView
            android:id="@+id/place_info"
            style="@style/InfoTexts"
            android:freezesText="true"
            />
        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/button_back"
            android:clickable="true"
            android:onClick="onBack"
            android:textColor="@color/secondary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onClickSend"
            android:padding="12dp"
            android:text="@string/button_send"
            android:textColor="@color/secondary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
